--- a/page.html
+++ b/page.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet" /> 
+
     <title>Document</title>
+
 </head>
 <body>
+
+    <!-- NAVBAR-->
+    <header>
+        <nav class="navbar">
+            <div class="navbar__brand">
+                <img src="./assets/logo.png" alt="logo" class="navbar__logo" />
+            </div>
+
+            <div class="navbar__nav__items"> 
+                <button class="nav__item  button__primary "> Order Food </button>
+            </div>
+
+        </nav>
+
+    </header>
+  
+    <!-- Hero Section
+
+     As it is used to convey to convey 
+     Important info. to reader 
+    -->
      
+    <main class="container" > 
+        <section class="hero__container">
+            <div class="hero__image__container">
+                <img class="hero__image" src="./assets/hero.jpg" alt="hero image" />
+            </div>
+            <div class="hero__descreption " >
+                <h1 class="hero__text"> 
+                    Order food from favourite restraunts near you. 
+                </h1>
+
+                <button class="button__primary"> 
+                  Order Now     
+                </button>
+
+            </div>
+        </section>
+    </main>
+
+
+
 </body>
 </html>
