Done with Hero Section

--- a/page.html
+++ b/page.html
@@ -41,9 +41,23 @@
      
     <main class="container" > 
         <section class="hero__container">
+
             <div class="hero__image__container">
                 <img class="hero__image" src="./assets/hero.jpg" alt="hero image" />
+                <img class="hero__image__shape" 
+                 src="./assets/svg/herobgpattren.svg" 
+                 alt="hero__shape" 
+                />
+
+               <img class="hero__image__pattern"
+                src="./assets/svg/heroShape.svg"
+                alt="hero__pattern" 
+               />
+
             </div>
+
+
+
             <div class="hero__descreption " >
                 <h1 class="hero__text"> 
                     Order food from favourite restraunts near you. 
@@ -55,6 +69,30 @@
 
             </div>
         </section>
+
+
+
+
+        <!-- Exploreee Menuu Section -->
+        <section class=" explore__menu__container ">
+            <h1 class="explore__menu__text"> Explore Our Menu</h1>
+            <div class="explore__menu__lists" > 
+                <div class="food__menu__card"> 
+                 <img src="./assets/burger.jpg" alt="burger" class="food__image" />   
+                <div class="food__menu__card__description">  
+                    <h3 class="food__title"> </h3>
+                    <p class="food__restaurants"> </p>
+                </div>
+                </div> 
+            </div>
+
+
+
+
+
+        </section>
+
+
     </main>
 
 
