Added food Cards

--- a/page.html
+++ b/page.html
@@ -74,8 +74,15 @@
 
 
         <!-- Exploreee Menuu Section -->
+
+
         <section class=" explore__menu__container ">
             <h1 class="explore__menu__text"> Explore Our Menu</h1>
+
+            <div class="explore__menu__rhombus__gradient__bg">
+                
+            </div>
+
             <div class="explore__menu__lists" > 
 
 
@@ -101,7 +108,7 @@
                 <!--Pizza -->
 
 
-                <div class="food__menu__card"> 
+                <div class="food__menu__card" id="pizza__card"> 
                     <img src="./assets/pizza.jpg" 
                         alt="pizza" 
                         class="food__image" 
