--- a/page.html
+++ b/page.html
@@ -1,36 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <link rel="stylesheet" href="style.css">
-
-
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet" /> 
-
-    <title>Document</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css"/>
+    <title>Zomato Landing Page Clone</title>
 </head>
 <body>
-
-    <!-- NAVBAR-->
     <header>
         <nav class="navbar">
             <div class="navbar__brand">
-                <img src="./assets/logo.png" alt="logo" class="navbar__logo" />
+                <img src="assets/logo.png" alt="logo" class="navbar__logo">
             </div>
-
-            <div class="navbar__nav__items"> 
-                <button class="nav__item  button__primary "> Order Food </button>
+            <div class="navbar__nav__items">
+                <button class="nav__item button__primary">
+                    Order Food      
+                </button>
             </div>
-
         </nav>
-
     </header>
   
     <!-- Hero Section
@@ -150,13 +140,95 @@
                 <button class="button__primary "> View More </button>
             </div>
             
+        </section>
+
+      <!-- Restaurant list -->
+
+      <section class="restaurant__container">
+        <h1 class="restaurant__text">Order From 100s of restaurants</h1>
+        <div class="restaurant__images__container">
+          <div class="restaurant__images__row__one">
+            <div class="restaurant__image__1">
+              <img
+                src="./assets/restaurant1.jpg"
+                alt="restaurant1"
+                class="restaurant__1"
+              />
+            </div>
+            <div class="restaurant__image__2">
+              <img
+                src="./assets/restaurant2.jpg"
+                alt="restaurant2"
+                class="restaurant__2"
+              />
+            </div>
+          </div>
+          <div class="restaurant__images__row__two">
+            <div class="restaurant__image__3">
+              <img
+                src="./assets/restaurant3.jpg"
+                alt="restaurant3"
+                class="restaurant__3"
+              />
+            </div>
+            <div class="restaurant__image__4">
+              <img
+                src="./assets/restaurant4.jpg"
+                alt="restaurant4"
+                class="restaurant__4"
+              />
+            </div>
+          </div>
+        </div>
+      </section>        
 
 
+        <!-- Email Subscribe Button  -->
 
+
+        <section class="email__subcribe__container">
+            <div>
+              <h1 class="text-xl">Stay Updated</h1>
+              <div class="email__subcribe__input__field">
+                <div>
+                  <input
+                    type="email"
+                    placeholder="email@email.com"
+                    class="email__input"
+                   />
+                </div>
+                <button class="button__primary">Get Updates</button>
+              </div>
+            </div>
+        </section>
+
+
+        <!-- Quatoes Container -->
+
+
+        <section class="quote__container">
+            <div class="quote_image_overlay"></div>
+            <h3 class="quote_image_text">
+              When a man's stomach is full it makes no difference whether he is rich
+              or poor.
+            </h3>
         </section>
 
 
     </main>
+
+
+    <!-- Footer Section  -->
+    <footer>
+        <img src="./assets/logo.png" alt="logo" />
+        <ul>
+          <li>Pricing</li>
+          <li>Terms and condition</li>
+          <li>Partnership</li>
+          <li>Career</li>
+          <li>Contact</li>
+        </ul>
+    </footer>
 
 
 
